--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,8 @@
 	{% endif %}
 
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<link rel="stylesheet" href="/main.css">
-	<link rel="stylesheet" href="main.css">
-	<link rel="stylesheet" href="../main.css">
-	<link rel="manifest" href="/manifest.webmanifest">
+	<link rel="stylesheet" href="/main.scss">
+	<link rel="stylesheet" href="main.scss">
+	<link rel="stylesheet" href="../main.scss">
+	<link rel="manifest" href="manifest.webmanifest">
 </head>
