--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,5 @@
 	<link rel="stylesheet" href="/main.scss">
 	<link rel="stylesheet" href="main.scss">
 	<link rel="stylesheet" href="../main.scss">
-	<link rel="manifest" href="manifest.webmanifest">
+	<link rel="manifest" href="https://github.com/suwungtandon/page-web-ar/blob/master/manifest.webmanifest">
 </head>
