--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,5 +39,6 @@
 	<link href="splashscreens/ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
 	<link href="splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />  
 	
+	<link rel='manifest' href='/manifest.webmanifest'>
 	<!-- <link rel="manifest" href="https://github.com/suwungtandon/page-web-ar/blob/master/manifest.webmanifest"> -->
 </head>
