--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
 {% include head.html %}
 
 <body>
+    <button onclick="install()">
+        ADD TO HOME SCREEN
+    </button>
+    
     <div class="imageWrapper">
             <div class="headerBackground">
                 <div class="container">
